# Bambulab-Filament-Tracker

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: google_apps_script.gs  old_mac_setup.md
scripts/: bootstrap_macos.sh
src/bambulab_filament_tracker/: __init__.py  cli.py  cloud.py  config.py  db.py  http.py  parser.py  refresh.py  service.py  sheets_sync.py  snapshot.py  tracker.py
tests/: test_parser.py
